refactor compaction planner further
